# service/problem.go
@@ -8,14 +8,16 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 )
 
 // GetProblemList
-// @Summary 问题列表
 // @Tags 公共方法
+// @Summary 问题列表
 // @Param page query int false "page"
 // @Param size query int false "size"
 // @Param keyword query string false "keyword"
+// @Param category_identity query string false "category_identity"
 // @Success 200 {string} json "{"code":"200","data":""}"
 // @Router /problem-list [get]
 func GetProblemList(c *gin.Context) {
@@ -33,9 +35,9 @@ func GetProblemList(c *gin.Context) {
 	var count int64
 
 	keyword := c.Query("keyword")
-
-	list := make([]*models.Problem, 0)
-	tx := models.GetProblemList(keyword)
+	categoryIdentity := c.Query("category_identity")
+	list := make([]*models.ProblemBasic, 0)
+	tx := models.GetProblemList(keyword, categoryIdentity)
 	err = tx.Count(&count).Omit("content").Offset(page).Limit(size).Find(&list).Error
 	if err != nil {
 		log.Println("GetProblemList error:", err)
@@ -47,5 +49,45 @@ func GetProblemList(c *gin.Context) {
 			"list":  list,
 			"count": count,
 		},
+	})
+}
+
+// GetProblemDetail
+// @Tags 公共方法
+// @Summary 问题详情
+// @Param identity query string false "identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /problem-detail [get]
+func GetProblemDetail(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "问题唯一标识不能为空",
+		})
+		return
+	}
+	// 查找表
+	data := new(models.ProblemBasic)
+	err := models.DB.Where("identity = ?", identity).
+		Preload("ProblemCategories").Preload("ProblemCategories.CategoryBasic").
+		First(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "问题不存在",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get ProblemDetail Error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
 	})
 }
